@@ -1,5 +1,10 @@
 2010-09-15 Braden McDaniel  <braden@endoframe.com>
 
+	* src/script/javascript.cpp: JS_NewDouble is deprecated; use
+	JS_NewNumberValue instead.
+
+2010-09-15 Braden McDaniel  <braden@endoframe.com>
+
 	* src/script/javascript.cpp: JS_NewDoubleValue is deprecated; use
 	JS_NewNumberValue instead.
 
